--- a/character/character.html
+++ b/character/character.html
@@ -301,7 +301,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- 
+        
         <div id="ad-unit-p5-1" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block; background-color:transparent"
@@ -310,9 +310,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="8118051131"></ins>
             <script>
-                setTimeout(() => {
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                }, 500);
+                (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
         <div id="ad-unit-p3-1" class="ad-unit">
@@ -323,11 +321,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="2039727945"></ins>
             <script>
-                setTimeout(() => {
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                }, 500);
+                (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>-->
+        </div>
     </div>
 
 
@@ -429,7 +425,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
         </div>
-        <!-- 
+        
         <div id="ad-unit-p5-2" class="ad-unit">
             <ins class="adsbygoogle"
                 style="display:block; background-color:transparent"
@@ -451,7 +447,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <script>
                 (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
-        </div>-->
+        </div>
         <div style="height: 10px;"></div>
     </div>
 
@@ -2200,7 +2196,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             const characterName = new URLSearchParams(window.location.search).get('name');
             if (characterName) {
                 // Update ads based on character's persona3, persona5 property
-                // updateAdsForPersona5(characterName);
+                updateAdsForPersona5(characterName);
                 // Load recommendations if the section is visible
                 if (recommendations && recommendations.style.display !== 'none') {
                     loadRecommendations(characterName);
