--- a/character/character.html
+++ b/character/character.html
@@ -2210,6 +2210,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 }, 200);
 
                 // 광고 흰 박스 숨김
+                /*
                 setTimeout(() => {
                 document.querySelectorAll(".adsbygoogle").forEach(el => {
                     const status = el.getAttribute("data-ad-status");
@@ -2223,7 +2224,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     }
                     }
                 });
-                }, 3000);  // 광고 로딩 기다렸다가 검사
+                }, 3000);  // 광고 로딩 기다렸다가 검사*/
 
                 document.querySelectorAll(".adsbygoogle").forEach((adEl) => {
                     observer.observe(adEl, { attributes: true });
