--- a/character/character.html
+++ b/character/character.html
@@ -2210,21 +2210,23 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 }, 200);
 
                 // 광고 흰 박스 숨김
-                /*
-                setTimeout(() => {
-                document.querySelectorAll(".adsbygoogle").forEach(el => {
-                    const status = el.getAttribute("data-ad-status");
-                    const adslot = el.getAttribute("data-ad-slot");
-                    console.log("google status", status);
-                    console.log("google adslot", adslot);
-                    if (status === "unfilled" || el.querySelector("iframe") === null) {
+                
+                const observer = new MutationObserver((mutations) => {
+                mutations.forEach(m => {
+                    const el = m.target;
+                    if (
+                    el.classList?.contains("adsbygoogle") &&
+                    el.getAttribute("data-ad-status") === "unfilled"
+                    ) {
                     el.style.display = "none";
-                    if (el.parentElement) {
-                        el.parentElement.style.display = "none";
-                    }
+                    el.parentElement?.style.display = "none";
                     }
                 });
-                }, 3000);  // 광고 로딩 기다렸다가 검사*/
+                });
+
+                document.querySelectorAll(".adsbygoogle").forEach(el => {
+                observer.observe(el, { attributes: true });
+                });
 
                 document.querySelectorAll(".adsbygoogle").forEach((adEl) => {
                     observer.observe(adEl, { attributes: true });
