--- a/character/character.html
+++ b/character/character.html
@@ -2170,7 +2170,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         }
     }
 
-
+    // push 광고 
     function pushAdUnitsForCharacter(characterName) {
         const character = characterData[characterName];
         if (!character) return;
