--- a/character/character.html
+++ b/character/character.html
@@ -453,7 +453,23 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             </div>
         </div>
     </div>
+
+    <!-- 최하단 광고-->
+    <div style="height: 24px;"></div>
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </div>
+
+
+
+<!-- 스크립트 ----------------------------------------------------------------------->
 
 <script>
     document.addEventListener('DOMContentLoaded', async function() {
