--- a/character/character.html
+++ b/character/character.html
@@ -2196,56 +2196,74 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         if (!character) return;
 
         try {
-            // 광고 DOM을 먼저 모두 display: none 해두고
-            const allAdUnits = document.querySelectorAll('.ad-unit');
-            allAdUnits.forEach(ad => ad.style.display = 'none');
-
             // 조건에 따라 특정 광고 DOM만 표시 + push 실행
             if (character.persona5) {
                 const p5Ad = document.getElementById('ad-unit-p5-1');
                 if (p5Ad) {
-                    p5Ad.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
                 const p5Ad2 = document.getElementById('ad-unit-p5-2');
                 if (p5Ad2) {
-                    p5Ad2.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
+                
+                const adsToHide = document.querySelectorAll('.ad-unit:not([id^="ad-unit-p5-"])');
+                adsToHide.forEach(ad => {
+                    if (ad && ad.style) {
+                        ad.style.display = 'none';
+                    }
+                });
             } else if (character.persona3) {
                 const p3Ad = document.getElementById('ad-unit-p3-1');
                 if (p3Ad) {
-                    p3Ad.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
                 const p3Ad2 = document.getElementById('ad-unit-p3-2');
                 if (p3Ad2) {
-                    p3Ad2.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
+
+                const adsToHide = document.querySelectorAll('.ad-unit:not([id^="ad-unit-p3-"])');
+                adsToHide.forEach(ad => {
+                    if (ad && ad.style) {
+                        ad.style.display = 'none';
+                    }
+                });
             } else {
                 const defaultAd = document.getElementById('ad-unit-1');
                 if (defaultAd) {
-                    defaultAd.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
                 const defaultAd2 = document.getElementById('ad-unit-2');
                 if (defaultAd2) {
-                    defaultAd2.style.display = 'block';
                     setTimeout(() => {
                         (adsbygoogle = window.adsbygoogle || []).push({});
                     }, 300);
                 }
+
+                const p5AdsToHide = document.querySelectorAll('[id^="ad-unit-p5-"]');
+                const p3AdsToHide = document.querySelectorAll('[id^="ad-unit-p3-"]');
+                
+                p5AdsToHide.forEach(ad => {
+                    if (ad && ad.style) {
+                        ad.style.display = 'none';
+                    }
+                });
+                p3AdsToHide.forEach(ad => {
+                    if (ad && ad.style) {
+                        ad.style.display = 'none';
+                    }
+                });
             }
         } catch (error) {
             console.warn('광고 푸시 중 오류 발생:', error);
