--- a/character/character.html
+++ b/character/character.html
@@ -477,11 +477,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     
     <div id="ad-unit-bottom">
     <ins class="adsbygoogle"
-        style="display:inline-block; height:120px"
+        style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="9244892982"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
+        data-ad-slot="9244892982"></ins>
     </div>
     <div style="height: 12px;"></div>
     <script>
