--- a/character/character.html
+++ b/character/character.html
@@ -475,9 +475,9 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <!-- 최하단 광고-->
     <div style="height: 24px;"></div>
     
-    <div id="ad-unit-bottom">
+    <div id="ad-unit-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
-        style="display:inline-block;width:1136px;height:90px"
+        style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
         data-ad-slot="9244892982"></ins>
     </div>
