--- a/character/character.html
+++ b/character/character.html
@@ -482,6 +482,13 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         data-ad-slot="9244892982"></ins>
     </div>
     <div style="height: 12px;"></div>
+    <style>
+        @media (max-width: 540px) {
+            #ad-unit-bottom {
+                padding: 0 10px;
+            }
+        }
+    </style>
     <script>
         try {
             (adsbygoogle = window.adsbygoogle || []).push({});
