--- a/character/character.html
+++ b/character/character.html
@@ -481,21 +481,33 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         data-ad-client="ca-pub-5862324369257695"
         data-ad-slot="9244892982"></ins>
     </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
+    <div id="ad-unit-bottom-mobile" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="7189575280"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
     <div style="height: 12px;"></div>
     <style>
         @media (max-width: 540px) {
             #ad-unit-bottom {
-                padding: 0 10px;
+                display: none;
+            }
+        }
+        @media (min-width: 540px) {
+            #ad-unit-bottom-mobile {
+                display: none;
             }
         }
     </style>
-    <script>
-        try {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        } catch (e) {
-            console.log('최하단 광고 푸시 중 오류 발생:', e, 'id:', id);
-        }
-    </script>
 
     <script>
     function showAdAndPush(id) {
