--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -1293,6 +1293,19 @@ alternate_urls:
         if (priorityItems[5]) priorityItems[5].textContent = currentExplainTexts.priority_low;
         if (priorityItems[6]) priorityItems[6].textContent = currentExplainTexts.priority_very_low;
     }
+
+    // 광고 흰 박스 숨김
+    setTimeout(() => {
+        document.querySelectorAll(".adsbygoogle").forEach(el => {
+            const status = el.getAttribute("data-ad-status");
+            const adslot = el.getAttribute("data-ad-slot");
+            console.log("google status", status);
+            console.log("google adslot", adslot);
+            if (status === "unfilled" || el.querySelector("iframe") === null) {
+                el.style.display = "none";
+            }
+        });
+    }, 2000);  // 광고 로딩 기다렸다가 2초 후 검사
 </script>
 
 
