--- a/character/character.html
+++ b/character/character.html
@@ -475,7 +475,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <!-- 최하단 광고-->
     <div style="height: 24px;"></div>
     
-    <div id="ad-unit-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:inline-block;width:728px;height:90px"
         data-ad-client="ca-pub-5862324369257695"
@@ -484,7 +484,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
-    <div id="ad-unit-bottom-mobile" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <div id="ad-unit-bottom-mobile" class="AD-bottom-mobile" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
     <ins class="adsbygoogle"
         style="display:block"
         data-ad-client="ca-pub-5862324369257695"
@@ -498,12 +498,12 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <div style="height: 12px;"></div>
     <style>
         @media (max-width: 540px) {
-            #ad-unit-bottom {
+            .AD-bottom {
                 display: none;
             }
         }
         @media (min-width: 540px) {
-            #ad-unit-bottom-mobile {
+            .AD-bottom-mobile {
                 display: none;
             }
         }
