--- a/character/character.html
+++ b/character/character.html
@@ -484,30 +484,15 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
-    <div id="ad-unit-bottom-mobile" class="AD-bottom-mobile" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-5862324369257695"
-        data-ad-slot="7189575280"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    </div>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-   </script>
     <div style="height: 12px;"></div>
+    <!--
     <style>
         @media (max-width: 540px) {
             .AD-bottom {
-                display: none;
+                display: none !important;
             }
         }
-        @media (min-width: 540px) {
-            .AD-bottom-mobile {
-                display: none;
-            }
-        }
-    </style>
+    </style>-->
 
     <script>
     function showAdAndPush(id) {
