--- a/character/character.html
+++ b/character/character.html
@@ -485,14 +485,14 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         (adsbygoogle = window.adsbygoogle || []).push({});
    </script>
     <div style="height: 12px;"></div>
-    <!--
+    <!---->
     <style>
         @media (max-width: 540px) {
             .AD-bottom {
                 display: none !important;
             }
         }
-    </style>-->
+    </style>
 
     <script>
     function showAdAndPush(id) {
