--- a/character/character.html
+++ b/character/character.html
@@ -106,6 +106,19 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         </div>
     </div>
 
+    <div style="height: 24px;"></div>
+    
+    <div id="ad-unit-top" class="AD-top" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div style="height: 12px;"></div>
+
     <!-- 리뷰 섹션 -->
     <div class="review-card card-style">
         <h2>요약</h2>
@@ -488,7 +501,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <!---->
     <style>
         @media (max-width: 540px) {
-            .AD-bottom {
+            .AD-bottom, .AD-top {
                 display: none !important;
             }
         }
