--- a/apps/article/index.html
+++ b/apps/article/index.html
@@ -111,6 +111,27 @@ custom_css: article
             </a>
         </div>
     </div>
+
+    <div style="height: 24px;"></div>
+    
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div style="height: 12px;"></div>
+    <!---->
+    <style>
+        @media (max-width: 540px) {
+            .AD-bottom {
+                display: none !important;
+            }
+        }
+    </style>
 </div>
 
 <script>
