--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -296,6 +296,25 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
         </div>
     </dialog>
     
+    <div style="height: 24px;"></div>
+    
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+    <div style="height: 12px;"></div>
+    <style>
+        @media (max-width: 540px) {
+            .AD-bottom {
+                display: none !important;
+            }
+        }
+    </style>
 
 </div>
 
